--- a/Simulation/External target population/External target population Subtype ParBS.Rmd
+++ b/Simulation/External target population/External target population Subtype ParBS.Rmd
@@ -15,7 +15,7 @@ if(!require(XSRecency)){
 }
 ```
 
-# Generating panel data for screening population
+# Generating data for cross sectional and target (trial) populations
 ```{r}
 library(XSRecency)
 library(geepack)
@@ -155,7 +155,7 @@ get_panel_trial = function(n_sims, sample_size_trial, profiles_trial, follow_tim
 ```
 
 
-# Estimate the incidence ratio
+# Estimate incidence in target population
 ```{r}
 est_background_incidence = function(n_sims, sample_size_crossSec, sample_size_trial,
                                crossSec_data, trial_data, 
@@ -512,7 +512,7 @@ est_background_incidence = function(n_sims, sample_size_crossSec, sample_size_tr
 }
 ```
 
-
+# Simulate additional studies for estimating FRR and MDRI
 ```{r}
 simulate_beta_study = function(n_long_infect, phi.func, minT, maxT){
   N = n_long_infect
@@ -533,6 +533,7 @@ simulate_beta_studies = function(nsims, n_long_infect, phi.func, minT, maxT){
 }
 ```
 
+# Summarize results
 ```{r}
 nsim_background_incidence_ests_bs = function(weight_methods, path){
   true_lambda0 = sum(profiles_crossSec$Incidence * profiles_trial$Proportion)
@@ -641,7 +642,7 @@ nsim_background_incidence_ests_bs = function(weight_methods, path){
 }
 ```
 
-
+# Run the simulations
 ```{r}
 library(readr)
 follow_time = 3
