--- a/Simulation/Internal target population/Internal target population Subtype ParBS.Rmd
+++ b/Simulation/Internal target population/Internal target population Subtype ParBS.Rmd
@@ -15,7 +15,7 @@ if(!require(XSRecency)){
 }
 ```
 
-# Generating panel data for screening population
+# Generating data for cross sectional and target (trial) populations
 ```{r}
 library(XSRecency)
 library(geepack)
@@ -140,7 +140,7 @@ get_panel_data = function(n_sims, sample_size_screen, profiles_screen,
 ```
 
 
-# Estimate the incidence ratio
+# Estimate incidence in target population and efficacy
 ```{r}
 est_incidence = function(n_sims, sample_size_screen,
                                panel_data, beta1_ests, omega1_ests,
@@ -456,7 +456,7 @@ est_incidence = function(n_sims, sample_size_screen,
 }
 ```
 
-
+# Simulate additional studies for estimating FRR and MDRI
 ```{r}
 simulate_beta_study = function(n_long_infect, phi.func, minT, maxT){
   N = n_long_infect
@@ -477,7 +477,7 @@ simulate_beta_studies = function(nsims, n_long_infect, phi.func, minT, maxT){
 }
 ```
 
-
+# Summarize results
 ```{r}
 nsim_ests_bs = function(weight_methods, path){
   true_lambda0 = sum(panel_data_res$trial_proportion * profiles_screen$Incidence)/sum(panel_data_res$trial_proportion)
@@ -617,7 +617,7 @@ nsim_ests_bs = function(weight_methods, path){
 }
 ```
 
-
+# Run the simulations
 ```{r}
 library(foreach)
 library(readr)
